--- a/style.css
+++ b/style.css
@@ -123,6 +123,74 @@ header, footer {
 .which-player {
     text-transform: uppercase;
 }
+
+/*TOGGLE BUTTON*/
+.knobs,
+.layer {
+    position: absolute;
+    inset: 0 0 0 0;
+}
+.button {
+    position: relative;
+    top: 50%;
+    width: 130px;
+    height: 64px;
+    overflow: hidden;
+    border: 2px solid var(--dark-gray);
+}
+.button.r,
+.button.r .layer {
+    border-radius: 100px;
+}
+.checkbox {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    opacity: 0;
+    cursor: pointer;
+    z-index: 3;
+}
+.knobs {
+    z-index: 2;
+}
+.layer {
+    width: 100%;
+    background-color: white;
+    transition: 0.3s ease all;
+    z-index: 1;
+}
+#button-1 .knobs:before {
+    content: "YES";
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    width: 40px;
+    height: 20px;
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 1;
+    padding: 18px 8px;
+    background-color: rgb(0, 217, 7);
+    border-radius: 50%;
+    transition: 0.3s cubic-bezier(0.18, 0.89, 0.35, 1.15) all;
+}
+#button-1 .checkbox:checked + .knobs:before {
+    content: "NO";
+    left: 71px;
+    background-color: #f44336;
+}
+#button-1 .knobs,
+#button-1 .knobs:before,
+#button-1 .layer {
+    transition: 0.3s ease all;
+}
+/*end TOGGLE BUTTON*/
+
+
 .game-board {
     grid-template-columns: 1fr 1fr 1fr;
 }
