added a function that allows to play against computer which chooses random boxes

--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@ header, footer {
     top: 50%;
     width: 130px;
     height: 64px;
+    margin-top: var(--gap-m);
     overflow: hidden;
     border: 2px solid var(--dark-gray);
 }
@@ -162,7 +163,7 @@ header, footer {
     z-index: 1;
 }
 #button-1 .knobs:before {
-    content: "YES";
+    content: "NO";
     position: absolute;
     top: 4px;
     left: 4px;
@@ -174,14 +175,14 @@ header, footer {
     text-align: center;
     line-height: 1;
     padding: 18px 8px;
-    background-color: rgb(0, 217, 7);
+    background-color: #f44336;
     border-radius: 50%;
     transition: 0.3s cubic-bezier(0.18, 0.89, 0.35, 1.15) all;
 }
 #button-1 .checkbox:checked + .knobs:before {
-    content: "NO";
+    content: "YES";
     left: 71px;
-    background-color: #f44336;
+    background-color: rgb(0, 217, 7);
 }
 #button-1 .knobs,
 #button-1 .knobs:before,
